# Scirpt-GUI

./: .gitignore  main.py  main.qml  nuitka_run.sh  pyinstaller_run.sh  pyproject.toml  requirements.txt  resources.py  resources.qrc  setup.py  update_resources.sh
