[tool.poetry]
name = "script-gui"
version = "0.1.0"
description = ""
authors = ["levi <iooicoder@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7,<3.11"
PySide6 = "^6.3.1"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
cx-Freeze = "^6.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple/"
default = true